--- a/index.html
+++ b/index.html
@@ -365,8 +365,9 @@
                     <div class="section-title text-center">
                         <h2 class="font-alt">My Portfolio</h2>
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish,
-                            modern websites, web services and online stores. My passion is to design digital user
-                            experiences through the bold interface.</p>
+                            modern websites, web services and online stores. My passion is to design and develop
+                            applications that will be relevant today, tomorrow and in 5 years amidst the ever changing
+                            technology</p>
                     </div>
                 </div>
             </div>
