--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <main>
 
     <!-- Home Banner Start -->
-    <section id="home" class="home-banner gray-bg" style="background-image: url(assets/overlay-2.jpg);">
+    <section id="home" class="home-banner gray-bg" style="background-image: url(assets/overlay-24.jpg);">
         <div class="sec-round">
             <div class="container full-height">
                 <div class="round-item round-item-1"></div>
@@ -131,7 +131,7 @@
                 </div> <!-- col -->
 
                 <div class="col-md-6 text-center sm-m-45px-t">
-                    <img src="assets/image.png" title="" alt="">
+                    <img src="assets/image1.png" title="" alt="">
                 </div> <!-- col -->
 
             </div> <!-- row -->
