--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="home-text-center theme-after m-50px-t">
                         <h4>Hello, my name is</h4>
                         <h5 class="font-alt">Erastus Kirui</h5>
-                        <p>I'm a Software Engineer. I specialize in Website and Mobile Applications Design and
+                        <p>I'm a Software Engineer. I specialize in Web and Mobile Applications Design and
                             Development </p>
                         <div class="btn-bar">
                             <a href="#" class="m-btn-link m-btn-link-white theme-after">Download CV</a>
