--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
                         <p>I'm a Software Engineer. I specialize in Web and Mobile Applications Design and
                             Development </p>
                         <div class="btn-bar">
-                            <a href="#" class="m-btn-link m-btn-link-white theme-after">Download CV</a>
+                            <a href="assets/Erastus_Kirui_Resume.pdf" target="_blank"
+                               class="m-btn-link m-btn-link-white theme-after">Download CV</a>
                         </div>
                     </div> <!-- home-text-center -->
                 </div> <!-- col -->
@@ -120,9 +121,10 @@
                 <div class="col-md-6">
                     <div class="about-left">
                         <h2>I'm Erastus Kirui</h2>
-                        <h3>I'm a Lead UX & UI designer based in Canada</h3>
+                        <h3>I'm a full stack web and mobile applications developer based in Kigali, Rwanda</h3>
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish,
-                            modern websites, web services and online stores.</p>
+                            modern website and mobile services, applications and experiences using robust and modern
+                            technology to keep your platforms relevant today, tomorrow and 5 years from now</p>
                         <p>My passion is to design digital user experiences through the bold interface and meaningful
                             interactions. Check out my <a class="m-btn-link theme-after" href="#portfolio">Portfolio</a>
                         </p>
@@ -147,8 +149,8 @@
                 <div class="row">
                     <div class="col-6 col-md-3 col-sm-6 wow fadeInLeft">
                         <div class="counter-col">
-                            <div class="counter-data" data-count="375">
-                                <div class="count">375</div>
+                            <div class="counter-data" data-count="10">
+                                <div class="count">10</div>
                                 <h6>Happy Clients</h6>
                             </div>
                         </div>
@@ -157,9 +159,9 @@
 
                     <div class="col-6 col-md-3 col-sm-6 wow fadeInLeft">
                         <div class="counter-col">
-                            <div class="counter-data" data-count="375">
-                                <div class="count">375</div>
-                                <h6>Telephonic Talk</h6>
+                            <div class="counter-data" data-count="5">
+                                <div class="count">5</div>
+                                <h6>Websites Built</h6>
                             </div>
                         </div>
                     </div>
@@ -167,9 +169,9 @@
 
                     <div class="col-6 col-md-3 col-sm-6 wow fadeInLeft">
                         <div class="counter-col">
-                            <div class="counter-data" data-count="550">
-                                <div class="count">550</div>
-                                <h6>Photo Capture</h6>
+                            <div class="counter-data" data-count="3">
+                                <div class="count">3</div>
+                                <h6>Mobile Apps Built</h6>
                             </div>
                         </div>
                     </div>
@@ -177,9 +179,9 @@
 
                     <div class="col-6 col-md-3 col-sm-6 wow fadeInLeft">
                         <div class="counter-col">
-                            <div class="counter-data" data-count="450">
-                                <div class="count">450</div>
-                                <h6>Project</h6>
+                            <div class="counter-data" data-count="4">
+                                <div class="count">4</div>
+                                <h6>Web Applications Built</h6>
                             </div>
                         </div>
                     </div>
@@ -200,9 +202,11 @@
                 <div class="col-12 col-md-10 col-lg-7">
                     <div class="section-title text-center">
                         <h2 class="font-alt">My Services</h2>
-                        <p>I design and develop services for customers of all sizes, specializing in creating stylish,
-                            modern websites, web services and online stores. My passion is to design digital user
-                            experiences through the bold interface.</p>
+                        <p>I write code to make websites, web and mobile applications interactive and powerful. This may
+                            include: user management, content management, administration, dashboards, panels, forums,
+                            polls, newsletter mailers, shopping carts and so on.</p>
+                        <p>Pretty much anything that interacts with a database. APIs are my speciality when it comes to
+                            frontend and backend integration</p>
                     </div>
                 </div>
             </div> <!-- row -->
